align fix

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,4 +2,5 @@
   width: 690px;
   padding: 92px 100px 0;
   box-sizing: border-box;
+  align-self: flex-start;
 }
